--- a/homeworks/week18/hw1/views/admin/manage-menu.ejs
+++ b/homeworks/week18/hw1/views/admin/manage-menu.ejs
@@ -7,28 +7,29 @@
 
 <body>
   <%- include ('../templates/header') %>
-
+  <%- include ('../templates/admin-bar') %>
 
   <section class="manage manage-menu">
     <h2 class="title">後台-菜單管理</h2>
 
     <div class="admin-btn manage-btn">
-      <input type="button" class="admin-btn-first" value="登出"></input>
-        <input type="submit" class="admin-btn-second" value="新增"></input>
+      <a class="admin-btn-second" href="/menu-add">新增</a>
     </div>
   
     <section class="dishes admin-dishes ">
 
-      <div class="dishes-card ">
-        <img src="/images/dishes-f1.png" alt="">
-        <div class="dishes-info ">
-          <p class="dishes-name">輕盈高麗卷湘南</p>&nbsp|&nbsp<p class="dishes-price">$280</p>
+      <% menus.forEach((menu) => { %> 
+        <div class="dishes-card ">
+          <img src=<%= menu.imageURL %>>
+          <div class="dishes-info ">
+            <p class="dishes-name"><%= menu.dish %></p>&nbsp|&nbsp<p class="dishes-price">$<%= menu.price %></p>
+          </div>
+          <div class="admin-btn menu-btn">
+            <a class="admin-btn-first" href="/update/menu/<%= menu.id %>">編輯</a>
+            <a class="admin-btn-second" href="/delete/menu/<%= menu.id %>">刪除</a>
+          </div>
         </div>
-        <div class="admin-btn menu-btn">
-          <input type="button" class="admin-btn-first" value="編輯"></input>
-        <input type="submit" class="admin-btn-second" value="刪除"></input>
-        </div>
-      </div>
+      <% }) %> 
   
       <div class="dishes-card ">
         <img src="/images/dishes-f1.png" alt="">
@@ -36,8 +37,8 @@
           <p class="dishes-name">輕盈高麗卷湘南</p>&nbsp|&nbsp<p class="dishes-price">$280</p>
         </div>
         <div class="admin-btn menu-btn">
-          <button class="admin-btn-first">編輯</button>
-          <button class="admin-btn-second">刪除</button>
+          <a class="admin-btn-first" >編輯</a>
+          <a class="admin-btn-second" >刪除</a>
         </div>
       </div>
 
