--- a/homeworks/week18/hw1/views/menu.ejs
+++ b/homeworks/week18/hw1/views/menu.ejs
@@ -35,13 +35,15 @@
 
   <section class="dishes">
 
-    <div class="dishes-card">
-      <img src="/images/dishes-f1.png" alt="">
-      <div class="dishes-info">
-        <p class="dishes-name">輕盈高麗卷湘南</p>&nbsp|&nbsp<p class="dishes-price">$280</p>
+    <% menus.forEach((menu) => { %>
+      <div class="dishes-card">
+        <img src=<%= menu.imageURL %>>
+        <div class="dishes-info">
+          <p class="dishes-name"><%= menu.dish %></p>&nbsp|&nbsp<p class="dishes-price">$<%= menu.price %></p>
+        </div>
+        <button class="dishes-btn">加入購物車</button>
       </div>
-      <button class="dishes-btn">加入購物車</button>
-    </div>
+    <% }) %> 
 
     <div class="dishes-card">
       <img src="/images/dishes-f2.png" alt="">
