--- a/homeworks/week18/hw1/views/admin/lottery-add.ejs
+++ b/homeworks/week18/hw1/views/admin/lottery-add.ejs
@@ -12,6 +12,9 @@
  
     <div class="lg-title"><%= page %>獎項</div>
 
+    <% if (errorMessage && errorMessage.length > 0) { %> 
+      <h5><%= errorMessage %></h5>
+    <% } %> 
 
     <div class="admin-btn manage-btn">
       <a href="/manage-lottery" class="admin-btn-first">返回</a>
