--- a/homeworks/week18/hw1/views/admin/menu-add.ejs
+++ b/homeworks/week18/hw1/views/admin/menu-add.ejs
@@ -12,6 +12,9 @@
  
     <div class="lg-title"><%= page %>料理</div>
 
+    <% if (errorMessage && errorMessage.length > 0) { %> 
+      <h5><%= errorMessage %></h5>
+    <% } %> 
 
     <div class="admin-btn manage-btn">
       <a href="/manage-menu" class="admin-btn-first">返回</a>
