--- a/homeworks/week18/hw1/views/templates/header.ejs
+++ b/homeworks/week18/hw1/views/templates/header.ejs
@@ -44,4 +44,8 @@
       }
   }
 
+  if (params.includes('manage')) {
+    document.querySelector('.backend-btn').classList.add('hide')
+  }
+
 </script>
