--- a/homeworks/week18/hw1/views/admin/manage-menu.ejs
+++ b/homeworks/week18/hw1/views/admin/manage-menu.ejs
@@ -20,7 +20,7 @@
 
       <% menus.forEach((menu) => { %> 
         <div class="dishes-card ">
-          <img src=<%= menu.imageURL %>>
+          <img src=<%= menu.image %>>
           <div class="dishes-info ">
             <p class="dishes-name"><%= menu.dish %></p>&nbsp|&nbsp<p class="dishes-price">$<%= menu.price %></p>
           </div>
