--- a/homeworks/week18/hw1/public/style/style.sass
+++ b/homeworks/week18/hw1/public/style/style.sass
@@ -792,11 +792,12 @@ button:hover
       font-size: 1.2rem
       width: 70%
   .dish-info
-    +flex(space-between, inherit)
+    +flex(flex-end, inherit)
     font-size: 1.5rem
-    
+    margin-bottom: 10rem
     .dish-prices
-      width: 40%
+      +flex(flex-end, inherit)
+      width: 35%
       span
         width: 45%
       input
@@ -805,16 +806,6 @@ button:hover
         border:1px rgb(51, 153, 90) solid 
         font-size: 1.2rem
         width: 40%
-    .dish-img
-      width: 60%
-      span
-        width: 45%
-      input
-        height: 1.8rem
-        border-radius: 5px
-        border:1px rgb(51, 153, 90) solid 
-        font-size: 1.2rem
-        width: 70%
 
   .admin-btn
     +flex(flex-end, inherit)
@@ -826,6 +817,26 @@ button:hover
     top: -2%
     a
       font-size: 1rem
+
+  .img-upload-block
+    position: absolute
+    height: 13rem
+    bottom: 5%
+    left: 3%
+    display: flex
+    flex-direction: column
+    align-items: center
+    .upload-img
+      max-width: 21rem
+      width: 100%
+      input
+        font-size: .9rem
+    
+    .preview
+      margin-top: 1rem
+      width: 10rem
+      height: 10rem
+      border-radius: 5px
 
     
 // FAQ add & edit
@@ -1077,8 +1088,10 @@ footer
     width: 90%
     .dish-info
       flex-direction: column
+      margin-bottom: 14rem
       .dish-prices
         width: 100%
+        +flex(flex-start, inherit)
         span
           width: fit-content
         input
@@ -1094,6 +1107,14 @@ footer
       a
         padding: .2rem .4rem
         font-size: .2rem
+    
+    .img-upload-block
+      bottom: 10%
+      .upload-img
+        max-width: 19rem
+        display: flex
+      
+      
 
   .footer
     &-top 
