--- a/homeworks/week18/hw1/views/admin/manage-menu.ejs
+++ b/homeworks/week18/hw1/views/admin/manage-menu.ejs
@@ -31,50 +31,7 @@
         </div>
       <% }) %> 
   
-      <div class="dishes-card ">
-        <img src="/images/dishes-f1.png" alt="">
-        <div class="dishes-info ">
-          <p class="dishes-name">輕盈高麗卷湘南</p>&nbsp|&nbsp<p class="dishes-price">$280</p>
-        </div>
-        <div class="admin-btn menu-btn">
-          <a class="admin-btn-first" >編輯</a>
-          <a class="admin-btn-second" >刪除</a>
-        </div>
-      </div>
-
-      <div class="dishes-card ">
-        <img src="/images/dishes-f1.png" alt="">
-        <div class="dishes-info ">
-          <p class="dishes-name">輕盈高麗卷湘南</p>&nbsp|&nbsp<p class="dishes-price">$280</p>
-        </div>
-        <div class="admin-btn menu-btn">
-          <button class="admin-btn-first">編輯</button>
-          <button class="admin-btn-second">刪除</button>
-        </div>
-      </div>
-
-      <div class="dishes-card ">
-        <img src="/images/dishes-f1.png" alt="">
-        <div class="dishes-info ">
-          <p class="dishes-name">輕盈高麗卷湘南</p>&nbsp|&nbsp<p class="dishes-price">$280</p>
-        </div>
-        <div class="admin-btn menu-btn">
-          <button class="admin-btn-first">編輯</button>
-          <button class="admin-btn-second">刪除</button>
-        </div>
-      </div>
-
-      <div class="dishes-card ">
-        <img src="/images/dishes-f1.png" alt="">
-        <div class="dishes-info ">
-          <p class="dishes-name">輕盈高麗卷湘南</p>&nbsp|&nbsp<p class="dishes-price">$280</p>
-        </div>
-        <div class="admin-btn menu-btn">
-          <button class="admin-btn-first">編輯</button>
-          <button class="admin-btn-second">刪除</button>
-        </div>
-      </div>
-  
+      <div class="dishes-card fake"></div>
       <div class="dishes-card fake"></div>
   
       
