--- a/homeworks/week18/hw1/views/menu.ejs
+++ b/homeworks/week18/hw1/views/menu.ejs
@@ -37,7 +37,7 @@
 
     <% menus.forEach((menu) => { %>
       <div class="dishes-card">
-        <img src=<%= menu.imageURL %>>
+        <img src=<%= menu.image %>>
         <div class="dishes-info">
           <p class="dishes-name"><%= menu.dish %></p>&nbsp|&nbsp<p class="dishes-price">$<%= menu.price %></p>
         </div>
@@ -45,38 +45,7 @@
       </div>
     <% }) %> 
 
-    <div class="dishes-card">
-      <img src="/images/dishes-f2.png" alt="">
-      <div class="dishes-info">
-        <p class="dishes-name">鮮嫩洋芋白丁佐莎莎</p>&nbsp|&nbsp<p class="dishes-price">$280</p>
-      </div>
-      <button class="dishes-btn">加入購物車</button>
-    </div>
-
-    <div class="dishes-card">
-      <img src="/images/dishes-f3.png" alt="">
-      <div class="dishes-info">
-        <p class="dishes-name">六彩雙茄起司沙拉</p>&nbsp|&nbsp<p class="dishes-price">$280</p>
-      </div>
-      <button class="dishes-btn">加入購物車</button>
-    </div>
-
-    <div class="dishes-card">
-      <img src="/images/dishes-f4.png" alt="">
-      <div class="dishes-info">
-        <p class="dishes-name">豆芽涼拌羅勒小金磚</p>&nbsp|&nbsp<p class="dishes-price">$280</p>
-      </div>
-      <button class="dishes-btn">加入購物車</button>
-    </div>
-
-    <div class="dishes-card">
-      <img src="/images/dishes-f4.png" alt="">
-      <div class="dishes-info">
-        <p class="dishes-name">豆芽涼拌羅勒小金磚</p>&nbsp|&nbsp<p class="dishes-price">$280</p>
-      </div>
-      <button class="dishes-btn">加入購物車</button>
-    </div>
-
+    <div class="dishes-card fake"></div>
     <div class="dishes-card fake"></div>
 
     <div class="cart-icon">
